# HellArrrrUs

./: Makefile.common  README.md  gamescreen.cpp  main.cpp  storyscreen.cpp
assets/game/: GAME.air  GAME.sff  OUTRO.air  OUTRO.def  OUTRO.sff  SPEECH0.def  SPEECH1.def  SPEECH2.def
assets/game/dreamcast/: OUTRO.snd
boot/: ip.txt
cmake/: CMakeLists.txt
vita/: CmakeLists.txt
windows/: WelcomeHell.sln  WelcomeHell.vcxproj  WelcomeHell.vcxproj.filters  WelcomeHellAll.sln  WelcomeHellDreamcast.sln  WelcomeHellDreamcast.vcxproj  WelcomeHellVita.sln  WelcomeHellVita.vcxproj  WelcomeHellWeb.sln  WelcomeHellWeb.vcxproj  resource.h
